<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.9</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>io.sapl</groupId>
	<artifactId>sapl-demo-axon</artifactId>
	<version>3.1.0-SNAPSHOT</version>

	<name>SAPL Demo Axon</name>
	<description>Demo for SAPL Axon Framework Integration</description>

	<properties>
		<java.version>21</java.version>
		<axon.version>4.10.3</axon.version>
		<axonstarter.version>4.10.0</axonstarter.version>
		<axon.mongo.version>4.10.0</axon.mongo.version>
		<sapl.version>3.1.0-SNAPSHOT</sapl.version>
		<spotbugs.version>4.7.3.6</spotbugs.version>
		<sbcontrib.version>7.6.0</sbcontrib.version>
		<jacoco.version>0.8.11</jacoco.version>
		<maven.test.skip>true</maven.test.skip>
		<maven.javadoc.skip>true</maven.javadoc.skip>
		<argLine />
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Configure SAPL dependencies -->
				<groupId>io.sapl</groupId>
				<artifactId>sapl-bom</artifactId>
				<version>${sapl.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
		</dependency>
		<dependency>
			<groupId>de.flapdoodle.embed</groupId>
			<artifactId>de.flapdoodle.embed.mongo.spring3x</artifactId>
			<version>4.18.0</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
			<version>2.8.5</version>
		</dependency>

		<!-- Axon Framework -->
		<dependency>
			<groupId>org.axonframework</groupId>
			<artifactId>axon-spring-boot-starter</artifactId>
			<version>${axon.version}</version>
		</dependency>
		<dependency>
			<groupId>org.axonframework.extensions.reactor</groupId>
			<artifactId>axon-reactor-spring-boot-starter</artifactId>
			<version>${axonstarter.version}</version>
		</dependency>
		<dependency>
			<groupId>org.axonframework.extensions.mongo</groupId>
			<artifactId>axon-mongo</artifactId>
			<version>${axon.mongo.version}</version>
		</dependency>

		<!-- SAPL Engine -->
		<dependency>
			<!-- 
				This module provides Policy Enforcement Points for Axon and Spring Boot
			-->
			<groupId>io.sapl</groupId>
			<artifactId>sapl-axon</artifactId>
			<version>${sapl.version}</version>
		</dependency>
		<dependency>
			<!-- 
				You have to choose if you want to use an embedded policy engine implementing 
				a Policy Decision Point, or if you want to use a PDP Server remotely. 
			 -->
			<groupId>io.sapl</groupId>
			<!-- Use: sapl-spring-pdp-remote for a remote PDP -->
			<artifactId>sapl-spring-pdp-embedded</artifactId>
		</dependency>

		<!-- Utilities -->
		<dependency>
			<groupId>com.heutelbeck</groupId>
			<artifactId>base64uuid</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<repositories>
		<!-- Central on top here makes sure it has the highest priority. -->
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<name>Central Portal Snapshots</name>
		    <id>central-portal-snapshots</id>
		    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
		    <releases>
		       <enabled>false</enabled>
		    </releases>
		    <snapshots>
		      <enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<!-- Central on top here makes sure it has the highest priority. -->
		<pluginRepository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<name>Central Portal Snapshots</name>
		    <id>central-portal-snapshots</id>
		    <url>https://central.sonatype.com/repository/maven-snapshots/</url>
		    <releases>
		       <enabled>false</enabled>
		    </releases>
		    <snapshots>
		      <enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>io.sapl.demo.axon.SaplDemoAxonApplication</mainClass>
					<layout>JAR</layout>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<formats>
										<format>XML</format>
									</formats>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<activation>
				<jdk>[21,)</jdk>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<version>3.2.5</version>
							<configuration>
								<argLine>@{argLine} -Xshare:off
									-XX:+EnableDynamicAgentLoading</argLine>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-compiler-plugin</artifactId>
							<version>3.12.1</version>
							<configuration>
								<compilerArgs>
									<arg>-proc:full</arg>
								</compilerArgs>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>spotbugs</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs-maven-plugin</artifactId>
						<version>${spotbugs.version}</version>
						<configuration>
							<excludeFilterFile>spotbugsExcludeFilter.xml</excludeFilterFile>
							<includeTests>true</includeTests>
							<addSourceDirs>true</addSourceDirs>
							<plugins>
								<plugin>
									<groupId>com.mebigfatguy.sb-contrib</groupId>
									<artifactId>sb-contrib</artifactId>
									<version>${sbcontrib.version}</version>
								</plugin>
							</plugins>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>